--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simone Gee</title>
+    <title>collections</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Simone Gee</h1>
+<h1>collections</h1>
 <p><a href="https://www.scientology.org" target="_blank">Interested people</a> are interesting</p>   
 </body>
 </html>
