collection image update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>collections</h1>
+<img src="collections.png"
 <p><a href="https://www.scientology.org" target="_blank">Interested people</a> are interesting</p>   
 </body>
 </html>
