image updates [again]

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>collections</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<img src="collections.png"
-<p><a href="https://www.scientology.org" target="_blank">Interested people</a> are interesting</p>   
+    <div class="collections-img">
+        <img src="images/collections.png" />
+    </div>
+<a href="journal.html" target="_blank">journal</a>
 </body>
 </html>
