--- a/Project one/about.html
+++ b/Project one/about.html
@@ -25,7 +25,7 @@
         
     </header>
     <div class="mainRunner">
-        <img class="venus-script-about" src="poneimages/venus-script.png" />
+        <img class="venus-script-about" src="poneimages/groupabout.png" />
         <img class="roman" src="poneimages/roman.png" />
         <img class="goddess" src="poneimages/goddess.png" />
         <img class="of" src="poneimages/of.png" />
