--- a/Project one/artwork.html
+++ b/Project one/artwork.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="mainRunner">
-        <img class="artworkheader" src="poneimages/ARTWORK-page.png" />
+        <img class="artworkheader" src="poneimages/artwork.png" />
         <img class="marsvenus" src="poneimages/Groupartwork.png" />
         <img class="birthof" src="poneimages/anohter birth of venus.png" />
         <img class="statue" src="poneimages/WEB-artwork-lourve.png" />
