--- a/Project one/index.html
+++ b/Project one/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="mainRunner">
-        <img class="venus-script" src="poneimages/venus-script.png" />
+        <img class="grouphome" src="poneimages/grouphome.png" />
         <img class="newvenus" src="poneimages/newnewvenus.png" />
         <a href="about.html">
             <img class="hone" src="poneimages/about.png" />
