--- a/Project one/lovers.html
+++ b/Project one/lovers.html
@@ -24,8 +24,8 @@
         </a>
     </header>
 <div class="mainRunner">
-    <img class="loversheader" src="poneimages/LOVERS-page.png" />
-    <img class="mansone" src="poneimages/WEB-artwork-mans-3.png" />
+    <img class="loversheader" src="poneimages/lovers.png" />
+    <img class="mansone" src="poneimages/grouplovers.png" />
     <img class="adonis" src="poneimages/adonis.png" />
     <img class="manstwo" src="poneimages/mp,840x830,matte,f8f8f8,t-pad,1000x1000,f8f8f8.png" />
     <img class="mercury" src="poneimages/mercury.png" />
@@ -37,10 +37,5 @@
     <img class="hearttwo" src="poneimages/red-heart.png" />
     <img class="heartthree" src="poneimages/red-heart.png" />
     <img class="heartfour" src="poneimages/red-heart.png" />
-    <img class="lineone" src="poneimages/Line 1.png" />
-    <img class="linetwo" src="poneimages/Line 2.png" />
-
-<div class="linethree"></div>
-<div class="linefour"></div>
 </body>
 </html>
