--- a/project-two/about.html
+++ b/project-two/about.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Style Products</title>
+    <link rel="stylesheet" href="ptwostylesheet.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+<main class="container">
+    <div class="nav">
+        <p>All Products</p>
+    </div>
+    <div class="nav">
+    </div>
+    <div class="nav">
+    </div>
+
+    <div class="productbreak">
+      <h1>TREAT</h1>
+  </div>
+<div class="productbreakempty"></div>
+<div class="productbreakempty"></div>
+
+    <div class="picturebox fuzzparent">
+      <img class="bluefuzz"  src="ptwoimages/blue-fuzz.png">
+</div>
+    <div class="textbox">
+      <h1>Intensive Hair Repair</h1>
+          <p>This is where the title and item info will live
+            This is where the title and item info will live
+            This is where the title and item info will live
+            This is where the title and item info will live
+            This is where the title and item info will live
+          </p>
+    </div>
+    <div class="pricebox">
+      <h1>$49</h1>
+    </div>
+    <div class="picturebox">
+      <img src="ptwoimages/crls-blue.png">
+</div>
+ </main>
+
 </body>
 </html>
