about page work

--- a/project-two/about.html
+++ b/project-two/about.html
@@ -13,39 +13,24 @@
 
 </head>
 <body>
-<main class="container">
-    <div class="nav">
-        <p>All Products</p>
-    </div>
-    <div class="nav">
-    </div>
-    <div class="nav">
-    </div>
+<main class="containerabout">
 
-    <div class="productbreak">
-      <h1>TREAT</h1>
-  </div>
-<div class="productbreakempty"></div>
-<div class="productbreakempty"></div>
-
-    <div class="picturebox fuzzparent">
-      <img class="bluefuzz"  src="ptwoimages/blue-fuzz.png">
-</div>
-    <div class="textbox">
-      <h1>Intensive Hair Repair</h1>
-          <p>This is where the title and item info will live
-            This is where the title and item info will live
-            This is where the title and item info will live
-            This is where the title and item info will live
-            This is where the title and item info will live
-          </p>
+    <div class="navabout">
     </div>
-    <div class="pricebox">
-      <h1>$49</h1>
+    <div class="navabout">
     </div>
-    <div class="picturebox">
-      <img src="ptwoimages/crls-blue.png">
+    <div class="navabout">
+    </div>
+    <div class="aboutleftbox">
+        <h1>About</h1>
+    </div>
+<div class="aboutboxes"></div>
+<div class="navaboutright"></div>
+<div class="aboutleftbox">
+    <h1>About</h1>
 </div>
+<div class="aboutboxes"></div>
+<div class="navaboutright"></div>
  </main>
 
 </body>
