--- a/project-two/allproducts.html
+++ b/project-two/allproducts.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 <main class="container">
-    <div class="nav">
+    <div class="navigation">
         <p>All Products</p>
     </div>
-    <div class="nav">
+    <div class="navigation">
     </div>
-    <div class="nav">
+    <div class="navigation">
     </div>
 
     <div class="productbreak">
