--- a/project-two/index.html
+++ b/project-two/index.html
@@ -11,6 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Lora&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
