--- a/project-two/allproducts.html
+++ b/project-two/allproducts.html
@@ -13,15 +13,24 @@
 
 </head>
 <body>
+
+<header class="shop-header">
+  <main class="shop-nav"
+  <ul class="shop">
+    <li><a href="discover.html">Discover</a></li>
+    <li><a href="allproducts.html">Shop</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
+</main>
+</header>
 <main class="container">
     <div class="navigation">
-        <p>All Products</p>
     </div>
     <div class="navigation">
     </div>
-    <div class="navigation">
-    </div>
-
+    <div class="productbreak">
+  </div>
     <div class="productbreak">
       <h1>TREAT</h1>
   </div>
