--- a/project-two/allproducts.html
+++ b/project-two/allproducts.html
@@ -15,22 +15,14 @@
 <body>
 
 <header class="shop-header">
-  <main class="shop-nav"
-  <ul class="shop">
-    <li><a href="discover.html">Discover</a></li>
-    <li><a href="allproducts.html">Shop</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-</ul>
+<main class="shop-nav">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="discover.html">Discover</a></div>
+    <div><a href="about.html">About</a></div>
+    <div><a href="contact.html">Contact</a></div>
 </main>
 </header>
 <main class="container">
-    <div class="navigation">
-    </div>
-    <div class="navigation">
-    </div>
-    <div class="productbreak">
-  </div>
     <div class="productbreak">
       <h1>TREAT</h1>
   </div>
