--- a/project-two/about.html
+++ b/project-two/about.html
@@ -19,11 +19,28 @@
 
 <main class="aboutcontainer">
 
-    <div class="sidebar">
+<div class="sidebar">
+
+  <div class="logo">
+    <img src="ptwoimages/gyre-logo.png" style="width:100%">
+  </div>
+  <br/>
+  <br/>
+      <div> 
+        <ul class="home">
+            <li><a  class="aboutnav" href="index.html">Home</a></li>
+    <br/>
+            <li><a class="aboutnav" href="discover.html">Discover</a></li>
+    <br/>
+            <li><a class="aboutnav" href="allproducts.html">Shop</a></li>
+    <br/>
+            <li><a  class="aboutnav" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
 </div>
     <div class="content-1">
-      <h1>Intensive Hair Repair</h1>
-          <p>This is where the title and item info will live
+      <h1 class="h1-about">Intensive Hair Repair</h1>
+          <p class="p-about">This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
@@ -34,8 +51,8 @@
     <div class="sidebar">
 </div>
     <div class="content-1">
-      <h1>Hot Oil Treatment</h1>
-          <p>This is where the title and item info will live
+      <h1 class="h1-about">Hot Oil Treatment</h1>
+          <p class="p-about">This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
@@ -46,8 +63,8 @@
     <div class="sidebar">
       </div>
     <div class="content-1">
-      <h1>Repair Bonding Cream</h1>
-          <p>This is where the title and item info will live
+      <h1 class="h1-about">Repair Bonding Cream</h1>
+          <p class="p-about">This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
@@ -57,8 +74,6 @@
  </main>
 
 
-        
-</main>
 
 </body>
 </html>
