--- a/project-two/allproducts.html
+++ b/project-two/allproducts.html
@@ -26,8 +26,8 @@
     <div class="productbreak">
       <h1>TREAT</h1>
   </div>
-<div class="productbreakempty"></div>
-<div class="productbreakempty"></div>
+<div class="productbreakemptytop"></div>
+<div class="productbreakemptytop"></div>
 
     <div class="picturebox fuzzparent">
       <img class="bluefuzz"  src="ptwoimages/blue-fuzz.png">
