--- a/project-two/index.html
+++ b/project-two/index.html
@@ -15,43 +15,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 <body>
 
 <main class="homecontainer">
 
-    <div class="sidebar">
-      <div>
+  <div class="sidebar">
+      <div class="picturebox fuzzparent">
+        <img class="bluefuzz"  src="ptwoimages/all-the-colors-fuzz.png">
+      </div>
+      <div class="logo">
         <img src="ptwoimages/gyre-logo.png" style="width:100%">
       </div>
-      <br/>
-      <br/>
+  <br/>
+  <br/>
       <div> 
         <ul class="home">
             <li><a href="discover.html">Discover</a></li>
+    <br/>
             <li><a href="allproducts.html">Shop</a></li>
+    <br/>
             <li><a href="about.html">About</a></li>
+    <br/>
             <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-    </div>
-    <div class="content-home">
-      <div class="slideshow-container">
+  </div>
+  <div class="content-home">
+    <div class="slideshow-container">
 
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-orange.jpg" style="width:100%">
-</div>
+      <div class="mySlides fade">
+        <img src="ptwoimages/hair-orange.jpg" style="width:100%">
+      </div>
 
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-blue.jpg" style="width:100%">
-</div>
+      <div class="mySlides fade">
+        <img src="ptwoimages/hair-blue.jpg" style="width:100%">
+      </div>
 
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-green.jpg" style="width:100%">
-</div>
-
+      <div class="mySlides fade">
+        <img src="ptwoimages/hair-green.jpg" style="width:100%">
+      </div>
 </div>
 <br>
 
