--- a/Personal/journal.html
+++ b/Personal/journal.html
@@ -13,16 +13,52 @@
     </div>
     <br>
     <br>
-    <h1>1:
-        <div class="journal-site-link">
-            <a href="http://thatschic.net" target="_blank">thatschic.net</a>
-        </div>
-    </h1>
+<h1>Inspiring Site:</h1>
+    <br/>
+
+ <a href="http://thatschic.net" target="_blank">thatschic.net</a>
+
     
     <p>
     This website is very visually interesting without feeling cluttered or difficult to navigate.
     I like that scrolling down brings you a diffrernt landing page that follows the same theme but had a different feeling.
     Because you dont need to travel to each page through a link to see the information within each area. 
     That way you can keep scrolling to decide if you want to travel elsewhere first.</p>
+
+<br/>
+<br/>
+
+<h1>Project One Ideas:</h1>
+    <br/>
+
+     <p>
+   For project one I want to create a tonal sight for the goddess Venus. Using images from ancient roman sculptures
+for imagery. The text and images with share the same color in common. Text and images with float around the site and 
+have a scrolling style. I hope the site feels airy and stylized whith inofrmation being discovered as you scroll. </p>
+
+<br/>
+<br/>
+
+<h1>Two Sites you would do over:</h1>
+
+<a href="https://www.champagnepoetry.biz" target="_blank">Champagne Poetry </a> 
+<a href="https://www.loyly.net" target="_blank">Loyly </a>
+<br/>
+ <p>This site is one that I use often because I work at Loyly. This site has a genereally nice apperance but the content is not the easiest to navigate and understand. 
+    I think better organization and more sections with information could help the site with with navigation. I would use larger images with more of a scroll to learn about the different
+services that are offered. The images were just update thankfully so using those images would still be perfect. Maybe some hover could also help with experience on the site. </p>
+<br/>
+<br/>
+<h1>Week 9: journal entry</h1>
+
+<a href="https://builtbycivilization.com" target="_blank">Civilization</a>
+<br/>
+
+<p>This site by Civilization has an interesting navigation screen. The divisons of links are unlike any I have 
+    every seen on a sight before.
+    I like it's organized and how it takes up the whole screen. It makes all of the information to navigate 
+    very easy to understand, and when you hover over elements like instagram or address, you can see the information right there 
+    in the navigation. I like how clicking those links also brings you to the website, or to google maps to show you exactly what it is. 
+</p>
 </body>
 </html>
