--- a/project-two/allproducts.html
+++ b/project-two/allproducts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Products</title>
+    <title>Shop Gyre</title>
     <link rel="stylesheet" href="ptwostylesheet.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -34,7 +34,7 @@
           <img src="ptwoimages/crls-blue.png">
 </div>
     <div class="textbox">
-      <h1>Intensive Hair Repair</h1>
+      <h1>Intensive Hair Repair</h1>4
           <p>This is where the title and item info will live
             This is where the title and item info will live
             This is where the title and item info will live
