--- a/project-two/index.html
+++ b/project-two/index.html
@@ -96,51 +96,19 @@ function showSlides() {
 
 
 
-<!-- <div class="slideshow-container">
+<!-- meta tags -->
 
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-orange.jpg" style="width:100%">
-</div>
+<!--  Essential META Tags -->
+<meta property="og:title" content="Gyre Haircare">
+<meta property="og:type" content="shopping" />
+<meta property="og:image" content="ptwoimages/hair-orange">
+<meta property="og:url" content="sim-one-gee.github.io/project-two">
+<meta name="twitter:card" content="summary_large_image">
 
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-blue.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade">
-  <img src="ptwoimages/hair-green.jpg" style="width:100%">
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-
-<script>
-let slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
-slideshow -->
+<!--  Non-Essential, But Recommended -->
+<meta property="og:description" content="Haircare for those with curls">
+<meta property="og:site_name" content="Gyre Haircare">
+<meta name="twitter:image:alt" content="Gyre Hair care">
 
 </body>
 </html> 
