--- a/project-two/about.html
+++ b/project-two/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Products</title>
+    <title>About Gyre</title>
     <link rel="stylesheet" href="ptwostylesheet.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
