--- a/Personal/journal.html
+++ b/Personal/journal.html
@@ -60,5 +60,28 @@ services that are offered. The images were just update thankfully so using those
     very easy to understand, and when you hover over elements like instagram or address, you can see the information right there 
     in the navigation. I like how clicking those links also brings you to the website, or to google maps to show you exactly what it is. 
 </p>
+<br/>
+<br/>
+<h1> Journal prompt: Old sckoooling it</h1>
+
+<img src= "images/118803.jpg" class="myspace">
+
+<br/>
+
+<p>
+    myspace is the ultimate nostalgia for me. This is my first awareness of coding, and I had to use it in order to 
+    customize my page. And boy would I. These ecamples are a little crazy but the general idea is there. Images over images with a basic layout. 
+</p>
+
+<img src= "images/spacejam.jpg.webp" class="myspace">
+
+<br/>
+
+<p>
+    This space jam site also reminds me a sites I visited earlier on. The star background in particular and the 
+    blocky images. These sites would load from the top and appear eventually while it took forever to load. 
+    I couldn't wait to get on the internet and I was lucky that my dad was also interested. But I remember visiting sites like this with images on top of images. 
+</p>
+
 </body>
 </html>
